--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
         </table>
     </div>
     </section>
-    <script src="../Portal/style.js"></script>
+    <script src="js/style.js"></script>
 </body>
 </html>
